ScatchOrg2/ScratchOrg1/force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <description>contains all the students related information</description>
    <label>Student</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>Student Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>