ScatchOrg2/ScratchOrg1/force-app/main/default/objects/Student__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <inlineHelpText>enter address</inlineHelpText>
    <label>address</label>
    <type>TextArea</type>
</CustomField>