ScatchOrg2/ScratchOrg1/force-app/main/default/objects/Student__c/fields/handicap__c.field-meta.xml
<CustomField>
    <fullName>handicap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>handicap</label>
    <type>Checkbox</type>
</CustomField>