ScatchOrg2/ScratchOrg1/force-app/main/default/objects/Student__c/fields/mobile__c.field-meta.xml
<CustomField>
    <fullName>mobile__c</fullName>
    <inlineHelpText>enter mobile number</inlineHelpText>
    <label>mobile</label>
    <type>Phone</type>
</CustomField>