ScatchOrg2/ScratchOrg1/force-app/main/default/objects/Student__c/fields/parent_mobile__c.field-meta.xml
<CustomField>
    <fullName>parent_mobile__c</fullName>
    <inlineHelpText>enter parent mobile</inlineHelpText>
    <label>parent mobile</label>
    <type>Phone</type>
</CustomField>