ScatchOrg2/ScratchOrg1/force-app/main/default/objects/Student__c/fields/roll_no__c.field-meta.xml
<CustomField>
    <fullName>roll_no__c</fullName>
    <inlineHelpText>enter roll no.</inlineHelpText>
    <label>roll no.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>