ScatchOrg2/ScratchOrg1/force-app/main/default/objects/Student__c/fields/Student_Name__c.field-meta.xml
<CustomField>
    <fullName>Student_Name__c</fullName>
    <inlineHelpText>enter name of the student</inlineHelpText>
    <label>Student Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>